# ComfyUIMovies

./: .gitignore  README.md  pyproject.toml
comfymovies/: __init__.py  build.py  cli.py  comfy.py  config.py  convert.py  edit.py  film.py  music.py  post.py  prompts.py  studio.py  takes.py  to_ui.py  wan.py
docker/: Dockerfile  docker-compose.yml
docs/: SETUP.md
prompts/: README.md  chase.json  chase_v1_backup.json  disguised_robots.json  example_scenes.json  forest_friend.json  forest_friend_audio.md  gijoe_serpent.json  gijoe_serpent_empire.md  knockoffs_music.md  neon_run_music.md  neon_run_narration.md  rumble_dogs.json  serpent.json  serpent_theme.md  serpent_vo.md
scripts/: build_trailer.py  compose_images.py  edit_image.py  export_workflows.py  gen_character_sheet.py  quality_test.py  render_chase.py  render_ending.py  render_film.py  render_neonrun_v2.py  render_serpent.py  toon_test.py
tests/: test_build.py  test_convert_prompts.py  test_edit.py  test_to_ui.py
workflows/: flux2_image_edit.api.json  flux2_image_edit.ui.json  ltx2_3_t2v_api.json  object_info.snapshot.json  qwen_compose_3ref.api.json  qwen_compose_3ref.ui.json  qwen_image_edit_2511.api.json
