[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comfymovies"
version = "0.1.0"
description = "Text prompt -> seamless 60-120s LTX-2 movies via a remote ComfyUI (RTX 5090)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sleepyreaper" }]
license = { text = "MIT" }
# Core pipeline uses only the Python standard library (urllib/json/subprocess),
# so there are no hard runtime dependencies. ffmpeg is required on PATH for the
# optional ElevenLabs music merge.
dependencies = []

[project.scripts]
comfymovies = "comfymovies.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["comfymovies"]
